--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <ul>
                         
                         <li><a href="">HOME</a></li>
-                        <li><a href="">dan na</a></li>
-                        <li><a href="">dan na</a></li>
-                        <li><a href="">meka dannet na</a></li>
-                        <li><a href="">CONTACT US</a></li>
+                        <li><a href="">Java</a></li>
+                        <li><a href="">Programing in C</a></li>
+                        <li><a href="">DBMS</a></li>
+                        <li><a href="">Algo</a></li>
 
                     </ul>
                 </div>
