--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <li><a href="">dan na</a></li>
                         <li><a href="">meka nam dannawa hebei</a></li>
                         <li><a href="">meka dannet na</a></li>
+                        <li><a href="">ibbi</a></li>
                         <li><a href="">CONTACT US</a></li>
 
                     </ul>
