--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li><a href="">meka nam dannawa hebei</a></li>
                         <li><a href="">meka dannet na</a></li>
                         <li><a href="">CONTACT US</a></li>
+                        <li><a href="">pissu wage habay</a></li>
 
                     </ul>
                 </div>
