--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul>
                         
                         <li><a href="">HOME</a></li>
-                        <li><a href="">dan na</a></li>
+                        <li><a href="">pages</a></li>
                         <li><a href="">meka nam dannawa hebei</a></li>
                         <li><a href="">meka dannet na</a></li>
                         <li><a href="">CONTACT US</a></li>
