--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         <li><a href="">meka nam dannawa hebei</a></li>
                         <li><a href="">meka dannet na</a></li>
                         <li><a href="">CONTACT US</a></li>
-                        <li><a href=""></a>hehe</li>
-                        <li><a href=""></a>kindida</li>
-                        <li><a href=""></a>huhu</l
+                        <li><a href=""><hehe</li>
+                        <li><a href="">kindida</a></li>
+                        <li><a href="">huhu</a></li>
 
 
                     </ul>
