--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                         
                         <li><a href="">HOME</a></li>
                         <li><a href="">JAVA</a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="">SUBJECTS</a></li>
                         <li><a href="">ABOUT US</li>
                         <li><a href="">CONTACT US</a></li>
                         
